--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <header class="header">
         <!-- left box for logo -->
         <div class="left">
-                        <img src="/project- 1/img/abs-1850926_1920.jpg" alt="">
+                       <img src="https://webstockreview.net/images/weights-clipart-1.png" alt="">
             <div> Fitness Club</div>
         </div>
         <!-- mid box for navbar -->
